--- a/Lab_1_summarize_dialogue.ipynb
+++ b/Lab_1_summarize_dialogue.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Generative AI Use Case: Summarize Dialogue\n",
     "\n",
-    "Welcome to the practical side of this course. In this lab you will do the dialogue summarization task using generative AI. You will explore how the input text affects the output of the model, and perform prompt engineering to direct it towards the task you need. By comparing zero shot, one shot, and few shot inferences, you will take the first step towards prompt engineering and see how it can enhance the generative output of Large Language Models."
+    "Dialogue summarization task using generative AI. \n",
+    "- Effects of the input text affects the output of the model\n",
+    "- Prompt engineering to direct it towards the needed task\n",
+    "- Comparing zero shot, one shot, and few shot inferences"
    ]
   },
   {
@@ -121,7 +124,7 @@
     "tags": []
    },
    "source": [
-    "Load the datasets, Large Language Model (LLM), tokenizer, and configurator. Do not worry if you do not understand yet all of those components - they will be described and discussed later in the notebook."
+    "Load the datasets, Large Language Model (LLM), tokenizer, and configurator."
    ]
   },
   {
@@ -145,9 +148,7 @@
     "<a name='2'></a>\n",
     "## 2 - Summarize Dialogue without Prompt Engineering\n",
     "\n",
-    "In this use case, you will be generating a summary of a dialogue with the pre-trained Large Language Model (LLM) FLAN-T5 from Hugging Face. The list of available models in the Hugging Face `transformers` package can be found [here](https://huggingface.co/docs/transformers/index). \n",
-    "\n",
-    "Let's upload some simple dialogues from the [DialogSum](https://huggingface.co/datasets/knkarthick/dialogsum) Hugging Face dataset. This dataset contains 10,000+ dialogues with the corresponding manually labeled summaries and topics. "
+    "In this use case, a summary of a dialogue will be generated with the pre-trained Large Language Model (LLM) FLAN-T5 from Hugging Face."
    ]
   },
   {
@@ -161,15 +162,6 @@
     "huggingface_dataset_name = \"knkarthick/dialogsum\"\n",
     "\n",
     "dataset = load_dataset(huggingface_dataset_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Print a couple of dialogues with their baseline summaries."
    ]
   },
   {
@@ -198,13 +190,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the [FLAN-T5 model](https://huggingface.co/docs/transformers/model_doc/flan-t5), creating an instance of the `AutoModelForSeq2SeqLM` class with the `.from_pretrained()` method. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -219,18 +204,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "sPqQA3TT3l_I",
-    "tags": []
-   },
-   "source": [
-    "To perform encoding and decoding, you need to work with text in a tokenized form. **Tokenization** is the process of splitting texts into smaller units that can be processed by the LLM models. \n",
-    "\n",
-    "Download the tokenizer for the FLAN-T5 model using `AutoTokenizer.from_pretrained()` method. Parameter `use_fast` switches on fast tokenizer. At this stage, there is no need to go into the details of that, but you can find the tokenizer parameters in the [documentation](https://huggingface.co/docs/transformers/v4.28.1/en/model_doc/auto#transformers.AutoTokenizer)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -240,15 +213,6 @@
    "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_name, use_fast=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Test the tokenizer encoding and decoding a simple sentence:"
    ]
   },
   {
@@ -272,13 +236,6 @@
     "print(sentence_encoded[\"input_ids\"][0])\n",
     "print('\\nDECODED SENTENCE:')\n",
     "print(sentence_decoded)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now it's time to explore how well the base LLM summarizes a dialogue without any prompt engineering. **Prompt engineering** is an act of a human changing the **prompt** (input) to improve the response for a given task."
    ]
   },
   {
@@ -316,17 +273,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that the guesses of the model make some sense, but it doesn't seem to be sure what task it is supposed to accomplish. Seems it just makes up the next sentence in the dialogue. Prompt engineering can help here."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a name='3'></a>\n",
     "## 3 - Summarize Dialogue with an Instruction Prompt\n",
     "\n",
-    "Prompt engineering is an important concept in using foundation models for text generation. You can check out [this blog](https://www.amazon.science/blog/emnlp-prompt-engineering-is-the-new-feature-engineering) from Amazon Science for a quick introduction to prompt engineering."
+    "Prompt engineering is an important concept in using foundation models for text generation. "
    ]
   },
   {
@@ -334,11 +284,7 @@
    "metadata": {},
    "source": [
     "<a name='3.1'></a>\n",
-    "### 3.1 - Zero Shot Inference with an Instruction Prompt\n",
-    "\n",
-    "In order to instruct the model to perform a task - summarize a dialogue - you can take the dialogue and convert it into an instruction prompt. This is often called **zero shot inference**.  You can check out [this blog from AWS](https://aws.amazon.com/blogs/machine-learning/zero-shot-prompting-for-the-flan-t5-foundation-model-in-amazon-sagemaker-jumpstart/) for a quick description of what zero shot learning is and why it is an important concept to the LLM model.\n",
-    "\n",
-    "Wrap the dialogue in a descriptive instruction and see how the generated text will change:"
+    "### 3.1 - Zero Shot Inference with an Instruction Prompt"
    ]
   },
   {
@@ -392,20 +338,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:**\n",
-    "\n",
-    "- Experiment with the `prompt` text and see how the inferences will be changed. Will the inferences change if you end the prompt with just empty string vs. `Summary: `?\n",
-    "- Try to rephrase the beginning of the `prompt` text from `Summarize the following conversation.` to something different - and see how it will influence the generated output."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a name='3.2'></a>\n",
-    "### 3.2 - Zero Shot Inference with the Prompt Template from FLAN-T5\n",
-    "\n",
-    "Let's use a slightly different prompt. FLAN-T5 has many prompt templates that are published for certain tasks [here](https://github.com/google-research/FLAN/tree/main/flan/v2). In the following code, you will use one of the [pre-built FLAN-T5 prompts](https://github.com/google-research/FLAN/blob/main/flan/v2/templates.py):"
+    "### 3.2 - Zero Shot Inference with the Prompt Template from FLAN-T5"
    ]
   },
   {
@@ -451,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that this prompt from FLAN-T5 did help a bit, but still struggles to pick up on the nuance of the conversation. This is what you will try to solve with the few shot inferencing."
+    "Notice that this prompt from FLAN-T5 did help a bit, but still struggles to pick up on the nuance of the conversation."
    ]
   },
   {
@@ -459,9 +393,7 @@
    "metadata": {},
    "source": [
     "<a name='4'></a>\n",
-    "## 4 - Summarize Dialogue with One Shot and Few Shot Inference\n",
-    "\n",
-    "**One shot and few shot inference** are the practices of providing an LLM with either one or more full examples of prompt-response pairs that match your task - before your actual prompt that you want completed. This is called \"in-context learning\" and puts your model into a state that understands your specific task.  You can read more about it in [this blog from HuggingFace](https://huggingface.co/blog/few-shot-learning-gpt-neo-and-inference-api)."
+    "## 4 - Summarize Dialogue with One Shot and Few Shot Inference"
    ]
   },
   {
@@ -471,9 +403,7 @@
    },
    "source": [
     "<a name='4.1'></a>\n",
-    "### 4.1 - One Shot Inference\n",
-    "\n",
-    "Let's build a function that takes a list of `example_indices_full`, generates a prompt with full examples, then at the end appends the prompt which you want the model to complete (`example_index_to_summarize`).  You will use the same FLAN-T5 prompt template from section [3.2](#3.2). "
+    "### 4.1 - One Shot Inference"
    ]
   },
   {
@@ -516,15 +446,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Construct the prompt to perform one shot inference:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -538,15 +459,6 @@
     "one_shot_prompt = make_prompt(example_indices_full, example_index_to_summarize)\n",
     "\n",
     "print(one_shot_prompt)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Now pass this prompt to perform the one shot inference:"
    ]
   },
   {
@@ -581,9 +493,7 @@
    },
    "source": [
     "<a name='4.2'></a>\n",
-    "### 4.2 - Few Shot Inference\n",
-    "\n",
-    "Let's explore few shot inference by adding two more full dialogue-summary pairs to your prompt."
+    "### 4.2 - Few Shot Inference"
    ]
   },
   {
@@ -600,15 +510,6 @@
     "few_shot_prompt = make_prompt(example_indices_full, example_index_to_summarize)\n",
     "\n",
     "print(few_shot_prompt)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Now pass this prompt to perform a few shot inference:"
    ]
   },
   {
@@ -642,24 +543,9 @@
     "tags": []
    },
    "source": [
-    "In this case, few shot did not provide much of an improvement over one shot inference.  And, anything above 5 or 6 shot will typically not help much, either.  Also, you need to make sure that you do not exceed the model's input-context length which, in our case, if 512 tokens.  Anything above the context length will be ignored.\n",
+    "In this case, few shot did not provide much of an improvement over one shot inference.  And, anything above 5 or 6 shot will typically not help much, either.  It's also important not to exceed the model's input-context length which, in our case, if 512 tokens.  Anything above the context length will be ignored.\n",
     "\n",
-    "However, you can see that feeding in at least one full example (one shot) provides the model with more information and qualitatively improves the summary overall."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "**Exercise:**\n",
-    "\n",
-    "Experiment with the few shot inferencing.\n",
-    "- Choose different dialogues - change the indices in the `example_indices_full` list and `example_index_to_summarize` value.\n",
-    "- Change the number of shots. Be sure to stay within the model's 512 context length, however.\n",
-    "\n",
-    "How well does few shot inferencing work with other examples?"
+    "Feeding in at least one full example (one shot) provides the model with more information and qualitatively improves the summary overall."
    ]
   },
   {
@@ -670,32 +556,6 @@
    "source": [
     "<a name='5'></a>\n",
     "## 5 - Generative Configuration Parameters for Inference"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "You can change the configuration parameters of the `generate()` method to see a different output from the LLM. So far the only parameter that you have been setting was `max_new_tokens=50`, which defines the maximum number of tokens to generate. A full list of available parameters can be found in the [Hugging Face Generation documentation](https://huggingface.co/docs/transformers/v4.29.1/en/main_classes/text_generation#transformers.GenerationConfig). \n",
-    "\n",
-    "A convenient way of organizing the configuration parameters is to use `GenerationConfig` class. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "**Exercise:**\n",
-    "\n",
-    "Change the configuration parameters to investigate their influence on the output. \n",
-    "\n",
-    "Putting the parameter `do_sample = True`, you activate various decoding strategies which influence the next token from the probability distribution over the entire vocabulary. You can then adjust the outputs changing `temperature` and other parameters (such as `top_k` and `top_p`). \n",
-    "\n",
-    "Uncomment the lines in the cell below and rerun the code. Try to analyze the results. You can read some comments below."
    ]
   },
   {
@@ -740,15 +600,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, prompt engineering can take you a long way for this use case, but there are some limitations. Next, you will start to explore how you can use fine-tuning to help your LLM to understand a particular use case in better depth!"
+    "Prompt engineering can take you a long way for this use case, but there are some limitations."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1359,9 +1212,9 @@
   ],
   "instance_type": "ml.m5.2xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science 3.0)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/sagemaker-data-science-310-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1373,7 +1226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
