--- a/Lab_2_fine_tune_generative_ai_model.ipynb
+++ b/Lab_2_fine_tune_generative_ai_model.ipynb
@@ -13,7 +13,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, you will fine-tune an existing LLM from Hugging Face for enhanced dialogue summarization. You will use the [FLAN-T5](https://huggingface.co/docs/transformers/model_doc/flan-t5) model, which provides a high quality instruction tuned model and can summarize text out of the box. To improve the inferences, you will explore a full fine-tuning approach and evaluate the results with ROUGE metrics. Then you will perform Parameter Efficient Fine-Tuning (PEFT), evaluate the resulting model and see that the benefits of PEFT outweigh the slightly-lower performance metrics."
+    "Fine-tuning an existing LLM from Hugging Face for enhanced dialogue summarization. \n",
+    "- Using [FLAN-T5](https://huggingface.co/docs/transformers/model_doc/flan-t5) model, which provides a high quality instruction tuned model and can summarize text out of the box.\n",
+    "- To improve the inferences, a full fine-tuning approach and evaluate the results with ROUGE metrics. \n",
+    "- Performing Parameter Efficient Fine-Tuning (PEFT), evaluating the resulting model and see that the benefits of PEFT outweigh the slightly-lower performance metrics."
    ]
   },
   {
@@ -251,15 +254,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Import the necessary components. Some of them are new for this week, they will be discussed later in the notebook. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -283,9 +277,10 @@
    },
    "source": [
     "<a name='1.2'></a>\n",
-    "### 1.2 - Load Dataset and LLM\n",
+    "### 1.2 - Load Dataset and LLM ###\n",
     "\n",
-    "You are going to continue experimenting with the [DialogSum](https://huggingface.co/datasets/knkarthick/dialogsum) Hugging Face dataset. It contains 10,000+ dialogues with the corresponding manually labeled summaries and topics. "
+    "#### [DialogSum](https://huggingface.co/datasets/knkarthick/dialogsum) Hugging Face dataset: #### \n",
+    "It contains 10,000+ dialogues with the corresponding manually labeled summaries and topics. "
    ]
   },
   {
@@ -431,7 +426,7 @@
     "tags": []
    },
    "source": [
-    "Load the pre-trained [FLAN-T5 model](https://huggingface.co/docs/transformers/model_doc/flan-t5) and its tokenizer directly from HuggingFace. Notice that you will be using the [small version](https://huggingface.co/google/flan-t5-base) of FLAN-T5. Setting `torch_dtype=torch.bfloat16` specifies the memory type to be used by this model."
+    "Setting `torch_dtype=torch.bfloat16` specifies the memory type to be used by this model."
    ]
   },
   {
@@ -548,15 +543,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "It is possible to pull out the number of model parameters and find out how many of them are trainable. The following function can be used to do that, at this stage, you do not need to go into details of it. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -595,7 +581,7 @@
     "<a name='1.3'></a>\n",
     "### 1.3 - Test the Model with Zero Shot Inferencing\n",
     "\n",
-    "Test the model with the zero shot inferencing. You can see that the model struggles to summarize the dialogue compared to the baseline summary, but it does pull out some important information from the text which indicates the model can be fine-tuned to the task at hand."
+    "Test the model with the zero shot inferencing. The model struggles to summarize the dialogue compared to the baseline summary, but it does pull out some important information from the text which indicates the model can be fine-tuned to the task at hand."
    ]
   },
   {
@@ -688,7 +674,7 @@
     "<a name='2.1'></a>\n",
     "### 2.1 - Preprocess the Dialog-Summary Dataset\n",
     "\n",
-    "You need to convert the dialog-summary (prompt-response) pairs into explicit instructions for the LLM. Prepend an instruction to the start of the dialog with `Summarize the following conversation` and to the start of the summary with `Summary` as follows:\n",
+    "Converting the dialog-summary (prompt-response) pairs into explicit instructions for the LLM. Prepend an instruction to the start of the dialog with `Summarize the following conversation` and to the start of the summary with `Summary` as follows:\n",
     "\n",
     "Training prompt (dialogue):\n",
     "```\n",
@@ -780,7 +766,7 @@
     "tags": []
    },
    "source": [
-    "To save some time in the lab, you will subsample the dataset:"
+    "To save some time, subsample the dataset:"
    ]
   },
   {
@@ -838,15 +824,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Check the shapes of all three parts of the dataset:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -899,9 +876,7 @@
    "metadata": {},
    "source": [
     "<a name='2.2'></a>\n",
-    "### 2.2 - Fine-Tune the Model with the Preprocessed Dataset\n",
-    "\n",
-    "Now utilize the built-in Hugging Face `Trainer` class (see the documentation [here](https://huggingface.co/docs/transformers/main_classes/trainer)). Pass the preprocessed dataset with reference to the original model. Other training parameters are found experimentally and there is no need to go into details about those at the moment."
+    "### 2.2 - Fine-Tune the Model with the Preprocessed Dataset"
    ]
   },
   {
@@ -1062,6 +1037,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -1082,15 +1058,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Create an instance of the `AutoModelForSeq2SeqLM` class for the instruct model:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
@@ -1106,9 +1073,7 @@
    "metadata": {},
    "source": [
     "<a name='2.3'></a>\n",
-    "### 2.3 - Evaluate the Model Qualitatively (Human Evaluation)\n",
-    "\n",
-    "As with many GenAI applications, a qualitative approach where you ask yourself the question \"Is my model behaving the way it is supposed to?\" is usually a good starting point. In the example below (the same one we started this notebook with), you can see how the fine-tuned model is able to create a reasonable summary of the dialogue compared to the original inability to understand what is being asked of the model."
+    "### 2.3 - Evaluate the Model Qualitatively (Human Evaluation)"
    ]
   },
   {
@@ -1168,9 +1133,7 @@
    "metadata": {},
    "source": [
     "<a name='2.4'></a>\n",
-    "### 2.4 - Evaluate the Model Quantitatively (with ROUGE Metric)\n",
-    "\n",
-    "The [ROUGE metric](https://en.wikipedia.org/wiki/ROUGE_(metric)) helps quantify the validity of summarizations produced by models. It compares summarizations to a \"baseline\" summary which is usually created by a human. While not perfect, it does indicate the overall increase in summarization effectiveness that we have accomplished by fine-tuning."
+    "### 2.4 - Evaluate the Model Quantitatively (with ROUGE Metric)"
    ]
   },
   {
@@ -1197,13 +1160,6 @@
    ],
    "source": [
     "rouge = evaluate.load('rouge')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Generate the outputs for the sample of the test dataset (only 10 dialogues and summaries to save time), and save the results."
    ]
   },
   {
@@ -1378,15 +1334,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Evaluate the models computing ROUGE metrics. Notice the improvement in the results!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
@@ -1423,13 +1370,6 @@
     "print(original_model_results)\n",
     "print('INSTRUCT MODEL:')\n",
     "print(instruct_model_results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The file `data/dialogue-summary-training-results.csv` contains a pre-populated list of all model results which you can use to evaluate on a larger section of data. Let's do that for each of the models:"
    ]
   },
   {
@@ -1520,11 +1460,7 @@
     "<a name='3'></a>\n",
     "## 3 - Perform Parameter Efficient Fine-Tuning (PEFT)\n",
     "\n",
-    "Now, let's perform **Parameter Efficient Fine-Tuning (PEFT)** fine-tuning as opposed to \"full fine-tuning\" as you did above. PEFT is a form of instruction fine-tuning that is much more efficient than full fine-tuning - with comparable evaluation results as you will see soon. \n",
-    "\n",
-    "PEFT is a generic term that includes **Low-Rank Adaptation (LoRA)** and prompt tuning (which is NOT THE SAME as prompt engineering!). In most cases, when someone says PEFT, they typically mean LoRA. LoRA, at a very high level, allows the user to fine-tune their model using fewer compute resources (in some cases, a single GPU). After fine-tuning for a specific task, use case, or tenant with LoRA, the result is that the original LLM remains unchanged and a newly-trained “LoRA adapter” emerges. This LoRA adapter is much, much smaller than the original LLM - on the order of a single-digit % of the original LLM size (MBs vs GBs).  \n",
-    "\n",
-    "That said, at inference time, the LoRA adapter needs to be reunited and combined with its original LLM to serve the inference request.  The benefit, however, is that many LoRA adapters can re-use the original LLM which reduces overall memory requirements when serving multiple tasks and use cases."
+    "PEFT is a form of instruction fine-tuning that is much more efficient than full fine-tuning - with comparable evaluation results as you will see soon. "
    ]
   },
   {
@@ -1532,9 +1468,7 @@
    "metadata": {},
    "source": [
     "<a name='3.1'></a>\n",
-    "### 3.1 - Setup the PEFT/LoRA model for Fine-Tuning\n",
-    "\n",
-    "You need to set up the PEFT/LoRA model for fine-tuning with a new layer/parameter adapter. Using PEFT/LoRA, you are freezing the underlying LLM and only training the adapter. Have a look at the LoRA configuration below. Note the rank (`r`) hyper-parameter, which defines the rank/dimension of the adapter to be trained."
+    "### 3.1 - Setup the PEFT/LoRA model for Fine-Tuning"
    ]
   },
   {
@@ -1555,15 +1489,6 @@
     "    bias=\"none\",\n",
     "    task_type=TaskType.SEQ_2_SEQ_LM # FLAN-T5\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Add LoRA adapter layers/parameters to the original LLM to be trained."
    ]
   },
   {
@@ -1596,9 +1521,7 @@
    },
    "source": [
     "<a name='3.2'></a>\n",
-    "### 3.2 - Train PEFT Adapter\n",
-    "\n",
-    "Define training arguments and create `Trainer` instance."
+    "### 3.2 - Train PEFT Adapter"
    ]
   },
   {
@@ -1719,7 +1642,7 @@
     "tags": []
    },
    "source": [
-    "That training was performed on a subset of data. To load a fully trained PEFT model, read a checkpoint of a PEFT model from S3."
+    "That training was performed on a subset of data."
    ]
   },
   {
@@ -1782,15 +1705,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Prepare this model by adding an adapter to the original FLAN-T5 model. You are setting `is_trainable=False` because the plan is only to perform inference with this PEFT model. If you were preparing the model for further training, you would set `is_trainable=True`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
@@ -1807,15 +1721,6 @@
     "                                       './peft-dialogue-summary-checkpoint-from-s3/', \n",
     "                                       torch_dtype=torch.bfloat16,\n",
     "                                       is_trainable=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "The number of trainable parameters will be `0` due to `is_trainable=False` setting:"
    ]
   },
   {
@@ -1844,9 +1749,7 @@
    "metadata": {},
    "source": [
     "<a name='3.3'></a>\n",
-    "### 3.3 - Evaluate the Model Qualitatively (Human Evaluation)\n",
-    "\n",
-    "Make inferences for the same example as in sections [1.3](#1.3) and [2.3](#2.3), with the original model, fully fine-tuned and PEFT model."
+    "### 3.3 - Evaluate the Model Qualitatively (Human Evaluation)"
    ]
   },
   {
@@ -2120,13 +2023,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Compute ROUGE score for this subset of the data. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
@@ -2183,13 +2079,6 @@
    "metadata": {},
    "source": [
     "Notice, that PEFT model results are not too bad, while the training process was much easier!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You already computed ROUGE score on the full dataset, after loading the results from the `data/dialogue-summary-training-results.csv` file. Load the values for the PEFT model now and check its performance compared to other models."
    ]
   },
   {
@@ -2251,9 +2140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results show less of an improvement over full fine-tuning, but the benefits of PEFT typically outweigh the slightly-lower performance metrics.\n",
-    "\n",
-    "Calculate the improvement of PEFT over the original model:"
+    "The results show less of an improvement over full fine-tuning, but the benefits of PEFT typically outweigh the slightly-lower performance metrics."
    ]
   },
   {
@@ -2281,13 +2168,6 @@
     "improvement = (np.array(list(peft_model_results.values())) - np.array(list(original_model_results.values())))\n",
     "for key, value in zip(peft_model_results.keys(), improvement):\n",
     "    print(f'{key}: {value*100:.2f}%')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now calculate the improvement of PEFT over a full fine-tuned model:"
    ]
   },
   {
@@ -2944,9 +2824,9 @@
   },
   "instance_type": "ml.m5.2xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science 3.0)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/sagemaker-data-science-310-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2958,7 +2838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
